// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableSkeleton Component should allow variations in table layout: borders and table header row removed 1`] = `
<Table
  className="curiosity-skeleton-table "
  columnHeaders={
    [
      {
        "content": <Skeleton
          size="md"
        />,
      },
      {
        "content": <Skeleton
          size="md"
        />,
      },
      {
        "content": <Skeleton
          size="md"
        />,
      },
      {
        "content": <Skeleton
          size="md"
        />,
      },
      {
        "content": <Skeleton
          size="md"
        />,
      },
    ]
  }
  isBorders={false}
  isHeader={false}
  rows={
    [
      {
        "cells": [
          {
            "content": <Skeleton
              size="md"
            />,
          },
          {
            "content": <Skeleton
              size="md"
            />,
          },
          {
            "content": <Skeleton
              size="md"
            />,
          },
          {
            "content": <Skeleton
              size="md"
            />,
          },
          {
            "content": <Skeleton
              size="md"
            />,
          },
        ],
      },
    ]
  }
/>
`;

exports[`TableSkeleton Component should allow variations in table layout: className and variant 1`] = `
<Table
  className="curiosity-skeleton-table lorem-ipsum-class"
  columnHeaders={
    [
      {
        "content": <Skeleton
          size="md"
        />,
      },
      {
        "content": <Skeleton
          size="md"
        />,
      },
      {
        "content": <Skeleton
          size="md"
        />,
      },
      {
        "content": <Skeleton
          size="md"
        />,
      },
      {
        "content": <Skeleton
          size="md"
        />,
      },
    ]
  }
  isBorders={true}
  isHeader={false}
  rows={
    [
      {
        "cells": [
          {
            "content": <Skeleton
              size="md"
            />,
          },
          {
            "content": <Skeleton
              size="md"
            />,
          },
          {
            "content": <Skeleton
              size="md"
            />,
          },
          {
            "content": <Skeleton
              size="md"
            />,
          },
          {
            "content": <Skeleton
              size="md"
            />,
          },
        ],
      },
    ]
  }
  variant="compact"
/>
`;

exports[`TableSkeleton Component should allow variations in table layout: column and row count  1`] = `
<Table
  className="curiosity-skeleton-table "
  columnHeaders={
    [
      {
        "content": <Skeleton
          size="md"
        />,
      },
      {
        "content": <Skeleton
          size="md"
        />,
      },
      {
        "content": <Skeleton
          size="md"
        />,
      },
      {
        "content": <Skeleton
          size="md"
        />,
      },
      {
        "content": <Skeleton
          size="md"
        />,
      },
    ]
  }
  isBorders={true}
  isHeader={false}
  rows={
    [
      {
        "cells": [
          {
            "content": <Skeleton
              size="md"
            />,
          },
          {
            "content": <Skeleton
              size="md"
            />,
          },
          {
            "content": <Skeleton
              size="md"
            />,
          },
          {
            "content": <Skeleton
              size="md"
            />,
          },
          {
            "content": <Skeleton
              size="md"
            />,
          },
        ],
      },
    ]
  }
/>
`;

exports[`TableSkeleton Component should allow variations in table layout: no table header and zero rows 1`] = `
<Table
  className="curiosity-skeleton-table curiosity-skeleton-table__hidden-rows "
  columnHeaders={
    [
      {
        "content": <Skeleton
          size="md"
        />,
      },
      {
        "content": <Skeleton
          size="md"
        />,
      },
      {
        "content": <Skeleton
          size="md"
        />,
      },
      {
        "content": <Skeleton
          size="md"
        />,
      },
      {
        "content": <Skeleton
          size="md"
        />,
      },
    ]
  }
  isBorders={true}
  isHeader={false}
  rows={
    [
      {
        "cells": [
          {
            "content": <Skeleton
              size="md"
            />,
          },
          {
            "content": <Skeleton
              size="md"
            />,
          },
          {
            "content": <Skeleton
              size="md"
            />,
          },
          {
            "content": <Skeleton
              size="md"
            />,
          },
          {
            "content": <Skeleton
              size="md"
            />,
          },
        ],
      },
    ]
  }
/>
`;

exports[`TableSkeleton Component should allow variations in table layout: table column widths 1`] = `
<Table
  className="curiosity-skeleton-table "
  columnHeaders={
    [
      {
        "content": <Skeleton
          size="md"
        />,
      },
      {
        "content": <Skeleton
          size="md"
        />,
      },
      {
        "content": <Skeleton
          size="md"
        />,
        "width": 30,
      },
      {
        "content": <Skeleton
          size="md"
        />,
        "width": 15,
      },
      {
        "content": <Skeleton
          size="md"
        />,
        "width": 15,
      },
    ]
  }
  isBorders={true}
  isHeader={false}
  rows={
    [
      {
        "cells": [
          {
            "content": <Skeleton
              size="md"
            />,
          },
          {
            "content": <Skeleton
              size="md"
            />,
          },
          {
            "content": <Skeleton
              size="md"
            />,
            "width": 30,
          },
          {
            "content": <Skeleton
              size="md"
            />,
            "width": 15,
          },
          {
            "content": <Skeleton
              size="md"
            />,
            "width": 15,
          },
        ],
      },
    ]
  }
/>
`;

exports[`TableSkeleton Component should allow variations in table layout: table header and zero rows 1`] = `
<Table
  className="curiosity-skeleton-table curiosity-skeleton-table__hidden-rows "
  columnHeaders={
    [
      {
        "content": <Skeleton
          size="md"
        />,
      },
      {
        "content": <Skeleton
          size="md"
        />,
      },
      {
        "content": <Skeleton
          size="md"
        />,
      },
      {
        "content": <Skeleton
          size="md"
        />,
      },
      {
        "content": <Skeleton
          size="md"
        />,
      },
    ]
  }
  isBorders={true}
  isHeader={true}
  rows={
    [
      {
        "cells": [
          {
            "content": <Skeleton
              size="md"
            />,
          },
          {
            "content": <Skeleton
              size="md"
            />,
          },
          {
            "content": <Skeleton
              size="md"
            />,
          },
          {
            "content": <Skeleton
              size="md"
            />,
          },
          {
            "content": <Skeleton
              size="md"
            />,
          },
        ],
      },
    ]
  }
/>
`;

exports[`TableSkeleton Component should render a non-connected component: non-connected 1`] = `
<Table
  className="curiosity-skeleton-table "
  columnHeaders={
    [
      {
        "content": <Skeleton
          size="md"
        />,
      },
    ]
  }
  isBorders={true}
  isHeader={false}
  rows={
    [
      {
        "cells": [
          {
            "content": <Skeleton
              size="md"
            />,
          },
        ],
      },
      {
        "cells": [
          {
            "content": <Skeleton
              size="md"
            />,
          },
        ],
      },
      {
        "cells": [
          {
            "content": <Skeleton
              size="md"
            />,
          },
        ],
      },
      {
        "cells": [
          {
            "content": <Skeleton
              size="md"
            />,
          },
        ],
      },
      {
        "cells": [
          {
            "content": <Skeleton
              size="md"
            />,
          },
        ],
      },
    ]
  }
/>
`;
